add entityType filter for hide (players)